feat(submodule): interfaces @ release

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = linux_thermal_zone_base
 	url = git@github.com:NathanaelGandhi/linux_thermal_zone_base.git
     branch = release
+[submodule "linux_thermal_zone_interfaces"]
+	path = linux_thermal_zone_interfaces
+	url = git@github.com:NathanaelGandhi/linux_thermal_zone_interfaces.git
+	branch = release
